# realcast

./: .env.example  .gitignore  .gitmodules  README.md  app.json  eas.json  expo-module.config.json  package-lock.json  package.json  tsconfig.json
android/: README.md  build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/baldguy/realcast/: MainActivity.kt  MainApplication.kt
android/app/src/main/java/com/libreal/android/signer/: NativeSigner.kt  SignerError.kt
android/app/src/main/java/expo/modules/libreal/: LibRealModule.kt
android/app/src/main/res/values/: strings.xml
android/rust-lib/: Cargo.toml
android/rust-lib/src/: lib.rs  sign.rs
app/: LibRealModule.ts  _layout.tsx  guest.tsx  index.tsx
app/(tabs)/: _layout.tsx  camera.tsx  channel.tsx  conversation.tsx  index.tsx  user.tsx
app/services/: FirebaseService.js
app/storage/: SecureStorageService.js
components/: Cast.tsx  ComposeCast.tsx  ConnectAsGuest.tsx  GuestHeaderLeft.tsx  HomeHeaderLeft.tsx  HomeHeaderRight.tsx  SignInWithNeynar.tsx
ios/Litecast/: Info.plist
ios/Litecast.xcodeproj/: project.pbxproj
scripts/: server.py  storage_server.py  timestamp_server.py
