[package]
name = "rust-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustlibreal"
crate-type = ["cdylib"]

[dependencies]
robusta_jni = "0.2.2"
c2pa = { path = "./lib/lib_real/sdk", version = "0.32.0", features = [
    "fetch_remote_manifests",
    "file_io",
    "add_thumbnails",
    "pdf",
    "unstable_api"
] }
gsig-rs = { path = "./lib/gsig-rs", version = "0.1.0" }
base64 = "0.22.1"
serde_json = "1.0.120"
tempfile = "3.10.1"
thiserror = "1.0.61"
ciborium = "0.2.2"
infer = "0.16.0"
serde = { version = "1.0.203", features = ["derive"] }
log = "0.4.22"